@@ -4,6 +4,10 @@ Revision history for Graphics-Primitive
   - Useless whitespace changes
   - POD typos
   - Border: switch from a single width to per-side Brushes
+  - Brush: add derive, equal_to and not_equal_to
+  - Border: now cloneable
+  - Border: add homogeneous, equal_to and not_equal_to
+  - Insets: ad as_array
 
 0.16
   - Opps, I forgot. :(
